--- a/sources/HeuristicLab.Hive.Client.ExecutionEngine/3.2/HeuristicLab.Hive.Client.ExecutionEngine-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Client.ExecutionEngine/3.2/HeuristicLab.Hive.Client.ExecutionEngine-3.2.csproj
@@ -89,27 +89,27 @@
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HeuristicLab.Core\HeuristicLab.Core.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Core\3.2\HeuristicLab.Core-3.2.csproj">
       <Project>{F43B59AB-2B8C-4570-BC1E-15592086517C}</Project>
-      <Name>HeuristicLab.Core</Name>
+      <Name>HeuristicLab.Core-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Hive.Client.Common\HeuristicLab.Hive.Client.Common.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Hive.Client.Common\3.2\HeuristicLab.Hive.Client.Common-3.2.csproj">
       <Project>{89F4BC52-C174-481E-9BD2-3814171020E8}</Project>
-      <Name>HeuristicLab.Hive.Client.Common</Name>
+      <Name>HeuristicLab.Hive.Client.Common-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Hive.Client.Communication\HeuristicLab.Hive.Client.Communication.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Hive.Client.Communication\3.2\HeuristicLab.Hive.Client.Communication-3.2.csproj">
       <Project>{AEB51212-CDBA-4FC6-A2EE-02359AA53ECE}</Project>
-      <Name>HeuristicLab.Hive.Client.Communication</Name>
+      <Name>HeuristicLab.Hive.Client.Communication-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Hive.Contracts\HeuristicLab.Hive.Contracts.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Hive.Contracts\3.2\HeuristicLab.Hive.Contracts-3.2.csproj">
       <Project>{134F93D7-E7C8-4ECD-9923-7F63259A60D8}</Project>
-      <Name>HeuristicLab.Hive.Contracts</Name>
+      <Name>HeuristicLab.Hive.Contracts-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Hive.JobBase\HeuristicLab.Hive.JobBase.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Hive.JobBase\3.2\HeuristicLab.Hive.JobBase-3.2.csproj">
       <Project>{21187322-52DD-4243-80A4-A85F0263E63B}</Project>
-      <Name>HeuristicLab.Hive.JobBase</Name>
+      <Name>HeuristicLab.Hive.JobBase-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
