--- a/sources/HeuristicLab.CEDMA.DB.Interfaces/3.3/HeuristicLab.CEDMA.DB.Interfaces-3.3.csproj
+++ b/sources/HeuristicLab.CEDMA.DB.Interfaces/3.3/HeuristicLab.CEDMA.DB.Interfaces-3.3.csproj
@@ -103,7 +103,7 @@
     <None Include="HeuristicLab.snk" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
