--- a/sources/HeuristicLab.Security.Core/3.2/HeuristicLab.Security.Core-3.2.csproj
+++ b/sources/HeuristicLab.Security.Core/3.2/HeuristicLab.Security.Core-3.2.csproj
@@ -49,17 +49,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Security.Contracts\HeuristicLab.Security.Contracts.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Security.Contracts\3.2\HeuristicLab.Security.Contracts-3.2.csproj">
       <Project>{D59E852C-F205-4647-8C05-EB9ED1CF44E9}</Project>
-      <Name>HeuristicLab.Security.Contracts</Name>
+      <Name>HeuristicLab.Security.Contracts-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Security.DataAccess\HeuristicLab.Security.DataAccess.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Security.DataAccess\3.2\HeuristicLab.Security.DataAccess-3.2.csproj">
       <Project>{AC3D84FF-F0D7-43F0-9C99-9F8DBE087E2C}</Project>
-      <Name>HeuristicLab.Security.DataAccess</Name>
+      <Name>HeuristicLab.Security.DataAccess-3.2</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
