--- a/sources/HeuristicLab.Security.DataAccess/3.2/HeuristicLab.Security.DataAccess-3.2.csproj
+++ b/sources/HeuristicLab.Security.DataAccess/3.2/HeuristicLab.Security.DataAccess-3.2.csproj
@@ -73,17 +73,17 @@
   </Target>
   -->
   <ItemGroup>
-    <ProjectReference Include="..\HeuristicLab.DataAccess\HeuristicLab.DataAccess.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.DataAccess\3.2\HeuristicLab.DataAccess-3.2.csproj">
       <Project>{9076697B-C151-46CD-95BC-1D059492B478}</Project>
-      <Name>HeuristicLab.DataAccess</Name>
+      <Name>HeuristicLab.DataAccess-3.2</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\HeuristicLab.Security.Contracts\HeuristicLab.Security.Contracts.csproj">
+    <ProjectReference Include="..\..\HeuristicLab.Security.Contracts\3.2\HeuristicLab.Security.Contracts-3.2.csproj">
       <Project>{D59E852C-F205-4647-8C05-EB9ED1CF44E9}</Project>
-      <Name>HeuristicLab.Security.Contracts</Name>
+      <Name>HeuristicLab.Security.Contracts-3.2</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
