Numerous small changes, coding conventions, renames, mini refactoring (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1542 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence.Test/HeuristicLab.Persistence.Test.csproj
+++ b/sources/HeuristicLab.Persistence.Test/HeuristicLab.Persistence.Test.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{E2245078-6F40-449E-A370-01A97A7C5E6A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test</RootNamespace>
-    <AssemblyName>Test</AssemblyName>
+    <RootNamespace>HeuristicLab.Persistence.Test</RootNamespace>
+    <AssemblyName>HeuristicLab.Persistence.Test</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <StartupObject>HeuristicLab.Persistence.Test.NewSerializationTest</StartupObject>
