--- a/sources/HeuristicLab.Persistence/3.3/app.config
+++ b/sources/HeuristicLab.Persistence/3.3/app.config
@@ -7,10 +7,10 @@
     </configSections>
     <userSettings>
         <HeuristicLab.Persistence.Properties.Settings>
-            <setting name="customConfigurations" serializeAs="String">
+            <setting name="CustomConfigurations" serializeAs="String">
                 <value />
             </setting>
-            <setting name="customConfigurationsTypeCache" serializeAs="String">
+            <setting name="CustomConfigurationsTypeCache" serializeAs="String">
                 <value />
             </setting>
         </HeuristicLab.Persistence.Properties.Settings>
