Replace final fixes for broken parent references with separation of instance creation with meta information. (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1553 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -118,13 +118,15 @@
     <Compile Include="Default\Xml\Primitive\DateTime2XmlFormatter.cs" />
     <Compile Include="Default\Xml\XmlFormat.cs" />
     <Compile Include="HeuristicLabPersistencePlugin.cs" />
-    <Compile Include="Core\DeSerializer.cs" />
+    <Compile Include="Core\Deserializer.cs" />
     <Compile Include="Core\Tag.cs" />
     <Compile Include="Interfaces\IFormat.cs" />
     <Compile Include="Interfaces\FormatBase.cs" />
     <Compile Include="Interfaces\IDecomposer.cs" />
     <Compile Include="Interfaces\IFormatter.cs" />
     <Compile Include="Core\ConfigurationService.cs" />
+    <Compile Include="Interfaces\Tokens\MetaInfoBeginToken.cs" />
+    <Compile Include="Interfaces\Tokens\MetaInfoEndToken.cs" />
     <Compile Include="Interfaces\Tokens\ISerializationToken.cs" />
     <Compile Include="Interfaces\Tokens\SerializationTokenBase.cs" />
     <Compile Include="Interfaces\Tokens\CompositeTokenBase.cs" />
