XML formatters for all primitive numeric types. (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1554 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -111,10 +111,21 @@
     <Compile Include="Default\Xml\Compact\NumberArray2XmlFormatterBase.cs" />
     <Compile Include="Core\DataMemberAccessor.cs" />
     <Compile Include="Default\Xml\Compact\IntList2XmlFormatter.cs" />
-    <Compile Include="Default\Xml\Primitive\String2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\Double2XmlFormatterBase.cs" />
+    <Compile Include="Default\Xml\Primitive\Decimal2XmlFormatterBase.cs" />
+    <Compile Include="Default\Xml\Primitive\Float2XmlFormatterBase.cs" />
+    <Compile Include="Default\Xml\Primitive\UInt2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\Long2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\ULong2XmlFormatter.cs" />
     <Compile Include="Default\Xml\Primitive\Int2XmlFormatter.cs" />
-    <Compile Include="Default\Xml\Primitive\Double2XmlFormatter.cs" />
-    <Compile Include="Default\Xml\Primitive\Boolean2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\SByte2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\Byte2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\Short2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\UShort2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\Bool2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\DecimalNumber2XmlFormatterBase.cs" />
+    <Compile Include="Default\Xml\Primitive\String2XmlFormatter.cs" />
+    <Compile Include="Default\Xml\Primitive\SimpleNumber2XmlFormatterBase.cs" />
     <Compile Include="Default\Xml\Primitive\DateTime2XmlFormatter.cs" />
     <Compile Include="Default\Xml\XmlFormat.cs" />
     <Compile Include="HeuristicLabPersistencePlugin.cs" />
